@@ -1,0 +1,5 @@
+'use strict'
+
+var gamut = require('./gamut')
+require('./transform')(gamut)
+module.exports = gamut
