@@ -1,10 +1,0 @@
-var vows = require('vows')
-var assert = require('assert')
-var gamut = require('../gamut')
-
-vows.describe('gamut functional').addBatch({
-  'gamut.map': {
-  },
-  'gamut.fn': {
-  }
-}).export(module)
